# names

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cli/: CMakeLists.txt  main.cpp
cmake/: namesConfig.cmake.in
include/names/: generator.h  names.h  version.h.in  words.h
src/: CMakeLists.txt  generator.cpp
tests/: CMakeLists.txt  test_generator.cpp
